Fix buttons active status on Safari; change hover effect on filter and pagination buttons

--- a/src/components/PersonProjects/css/filter-button.scss
+++ b/src/components/PersonProjects/css/filter-button.scss
@@ -13,15 +13,9 @@
   cursor: pointer;
   user-select: none;
 
-  &:hover {
-    background: $background-color-blue;
-    color: $text-color-white;
-    border: 1px solid transparent;
-  }
-  &:active {
-    &:after {
-      width: 150px;
-      height: 150px;
+  @media  (hover: hover) {
+    &:hover {
+      border: 1px solid $button-border-color-blue;
     }
   }
 }
